--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         <p>&copy; Anicia's Elegant Custom Cakes. All Rights Reserved 2025.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src=".script.js"></script>
 </body>
 </html>
