--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,12 +13,21 @@
         <p>Your dream cake, made to perfection.</p>
     </header>
 
+
+ <div id="message" style="display:none;">This is a custom message!</div>
+
+ <script src="script.js"></script> 
+
+
+
     <main>
+
         <section class="cta-buttons">
             <button onclick="customizeCake()">Customize Your Cake Now</button>
 <button onclick="contactUs()">Send Message for Consultation</button>
         </section>
 
+        
         <section class="how-it-works">
             <h2>How to Make Your Custom Cake:</h2>
             <ul>
