--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
  <div id="message" style="display:none;">This is a custom message!</div>
 
- <script src="script.js"></script> 
 
 
 
@@ -45,6 +44,6 @@
         <p>&copy; Anicia's Elegant Custom Cakes. All Rights Reserved 2025.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
