--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
     </header>
 
 
- <div id="message" style="display:none;">This is a custom message!</div>
-
-
+ <div id="message" style="display:">This is a custom message!</div>
 
 
     <main>
 
         <section class="cta-buttons">
-            <button onclick="customizeCake()">Customize Your Cake Now</button>
+            <button id="myButton">Customize Your Cake Now</button>
 <button onclick="contactUs()">Send Message for Consultation</button>
         </section>
 
@@ -44,6 +42,6 @@
         <p>&copy; Anicia's Elegant Custom Cakes. All Rights Reserved 2025.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
